# reduct

./: .gitignore  README.md  pyproject.toml
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  style.css
src/: reduct_server.py
src/reduct/: __init__.py
