[project]
name = "reduct"
version = "0.1.0"
description = "A tool for reducing information"
readme = "README.md"
authors = [
    { name = "Dan Davison", email = "dandavison7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-whisper>=20250625",
    "yt-dlp>=2024.12.13",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-slugify>=8.0.0",
    "python-dateutil>=2.8.0",
    "litellm>=1.52.0",
    "rich>=13.0.0",
]

[project.scripts]
reduct = "reduct:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
